--- a/invenio_collections/translations/cs/LC_MESSAGES/messages.po
+++ b/invenio_collections/translations/cs/LC_MESSAGES/messages.po
@@ -1,4 +1,4 @@
-# Spanish translations for invenio-collections.
+# Czech translations for invenio-collections.
 # Copyright (C) 2016 CERN
 # This file is distributed under the same license as the invenio-collections
 # project.
@@ -12,10 +12,10 @@ msgstr ""
 "POT-Creation-Date: 2016-08-19 17:25+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/inveniosoftware/teams/23537/es/)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: cs\n"
+"Language-Team: Czech "
+"(https://www.transifex.com/inveniosoftware/teams/23537/cs/)\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
