--- a/invenio_collections/translations/da/LC_MESSAGES/messages.po
+++ b/invenio_collections/translations/da/LC_MESSAGES/messages.po
@@ -1,4 +1,4 @@
-# Spanish translations for invenio-collections.
+# Danish translations for invenio-collections.
 # Copyright (C) 2016 CERN
 # This file is distributed under the same license as the invenio-collections
 # project.
@@ -12,9 +12,9 @@ msgstr ""
 "POT-Creation-Date: 2016-08-19 17:25+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language: es\n"
-"Language-Team: Spanish "
-"(https://www.transifex.com/inveniosoftware/teams/23537/es/)\n"
+"Language: da\n"
+"Language-Team: Danish "
+"(https://www.transifex.com/inveniosoftware/teams/23537/da/)\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
