--- a/invenio_collections/translations/messages.pot
+++ b/invenio_collections/translations/messages.pot
@@ -1,24 +1,20 @@
 # Translations template for invenio-collections.
-# Copyright (C) 2015 CERN
+# Copyright (C) 2016 CERN
 # This file is distributed under the same license as the invenio-collections
 # project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2016.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: invenio-collections 1.0.0.dev20150000\n"
+"Project-Id-Version: invenio-collections 1.0.0a4.dev20160729\n"
 "Report-Msgid-Bugs-To: info@inveniosoftware.org\n"
-"POT-Creation-Date: 2015-12-01 14:06+0100\n"
+"POT-Creation-Date: 2016-08-19 17:25+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.1.1\n"
-
-#: invenio_collections/views.py:50 invenio_collections/views.py:51
-msgid "Home"
-msgstr ""
+"Generated-By: Babel 2.3.4\n"
 
